# file-mover-for-google-drive

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: code-analysis.yml  labeler.yml  test-package.yml
docs/: file_mover_for_google_drive.html  index.html  search.js
docs/file_mover_for_google_drive/: actions.html  cli.html  common.html
docs/file_mover_for_google_drive/actions/: apply.html  plan.html  show.html  tidy_properties.html
docs/file_mover_for_google_drive/common/: client.html  interact.html  manage.html  models.html  report.html  report_plan.html  utils.html
src/file_mover_for_google_drive/: __init__.py  cli.py
src/file_mover_for_google_drive/actions/: __init__.py  apply.py  plan.py  show.py  tidy_properties.py
src/file_mover_for_google_drive/common/: client.py  interact.py  manage.py  models.py  report.py  report_plan.py  utils.py
tests/: conftest.py  helpers.py  test_action_apply.py  test_action_plan.py  test_action_show.py  test_actions.py  test_cli.py
tests/resources/: initial-personal.json
tests/resources/apply-after/: api-001.json  api-005.json  api-009.json  api-011.json  api-012.json  api-017.json  api-019.json  api-021.json  api-023.json  api-027.json  api-029.json  api-030.json  api-031.json  api-033.json  api-035.json  api-037.json  api-038.json  expected_logs.csv  outcomes.csv
tests/resources/apply-before/: api-001.json  api-003.json  api-004.json  api-006.json  api-008.json  api-014.json  api-016.json  api-017.json  api-018.json  api-019.json  api-021.json  api-022.json  api-023.json  api-024.json  api-026.json  api-028.json  api-030.json  api-032.json  api-034.json  api-035.json  api-036.json  api-037.json  api-040.json  api-041.json  api-042.json  api-043.json  api-044.json  api-045.json  api-046.json  api-047.json  api-049.json  api-050.json  api-052.json  api-054.json  api-056.json  expected_logs.csv  outcomes.csv
tests/resources/plan/: api-005-personal-folder-level1-001-files-list.json  api-007-personal-folder-level2-001-files-list.json  api-013-personal-file-level2-002-permissions-list.json  api-015-personal-file-level2-004-files-get.json
tests/resources/plan-after/: api-001.json  api-007.json  api-010a.json  api-011.json  api-012c.json  api-013.json  api-015.json  api-017.json  api-018a.json  api-020.json  api-021.json  entries.csv  expected_logs.csv  plans.csv
tests/resources/plan-before/: api-002.json  api-005.json  api-008.json  api-009.json  api-012.json  api-013-personal-file-level2-002-permissions-list.json  api-016.json  entries.csv  expected_logs.csv  plans.csv
tests/resources/show/: api-003-personal-folder-level0-files-list.json  api-005-personal-folder-level1-001-files-list.json  api-007-personal-folder-level2-001-files-list.json  api-011-personal-file-level2-002-permissions-list.json
tests/resources/show-after/: api-003.json  api-004.json  api-005.json  api-006.json  api-007.json  api-010.json  api-011.json  api-012.json  expected_logs.csv  permissions.csv
tests/resources/show-before/: api-001.json  api-003.json  api-005-personal-folder-level1-001-files-list.json  api-005.json  api-007.json  api-010.json  api-013.json  api-014.json  expected_logs.csv  permissions.csv
